# Motley

./: .clang-format  .gitignore  .gitmodules  README.md
AntColonySimulation/: CMakeLists.txt
AntColonySimulation/include/: Ant.h  AntColonySimulation.h  Core.h  Defaults.h  Utils.h
AntColonySimulation/src/: AntColonyApp.cpp  AntColonySimulation.cpp  Defaults.cpp  Utils.cpp
AutomatingTheBoringStuffWithPython/grep_func/: README.md  setup.py
AutomatingTheBoringStuffWithPython/grep_func/grep_func/: __init__.py  grep_func.py
AutomatingTheBoringStuffWithPython/grep_func/grep_func.egg-info/: PKG-INFO  SOURCES.txt
Boids/: CMakeLists.txt
Boids/include/: Boid.h  Boids.h  Core.h  Visualization.h
Boids/src/: Boids.cpp  BoidsApp.cpp  Visualization.cpp
Ceres_exploration/: CMakeLists.txt
Ceres_exploration/data/: circle_data.txt
Ceres_exploration/include/: bundle_adjustment.h  circle_fit.h  core.h  curve_fitting.h  example_1.h  hello_world.h  powell_function.h  robot_pose_mle.h  robust_curve_fitting.h
Ceres_exploration/scripts/: test.py
Ceres_exploration/src/: bundle_adjustment.cpp  circle_fit.cpp  curve_fitting.cpp  example_1.cpp  hello_world.cpp  main.cpp  powell_function.cpp  robot_pose_mle.cpp  robust_curve_fitting.cpp  run_bundle_adjustment.cpp  run_circle_fit.cpp  run_curve_fitting.cpp  run_hello_world.cpp  run_powell.cpp  run_robot_pose_mle.cpp  run_robust_curve_fitting.cpp  test.cpp
Eigen_Exploration/: CMakeLists.txt
Eigen_Exploration/src/: example.cpp
OpenGl_exploration/: CMakeLists.txt
OpenGl_exploration/images/: Online Python Compiler (Interpreter).html
OpenGl_exploration/images/Online Python Compiler (Interpreter)_files/: app.js  js.js
OpenGl_exploration/include/: core.h  example1.h  shader.h  shader2.h
OpenGl_exploration/src/: colored_cube.cpp  core.frag  core.vs  core2.frag  core2.vs  example1.cpp  run_example1.cpp  shader.cpp  texture.cpp  textured_cube.cpp  triangle.cpp  triangle2.cpp  triangle3.cpp  triangle4.cpp
PathFinding/: CMakeLists.txt
PathFinding/examples/: example1.cpp  example2.cpp
PathFinding/include/: Cell.h  Core.h  Corner.h  DefaultTypes.h  EnvironmentGeneration.h  Grid.h  Maze.h  PathFinding.h  PathFindingUtils.h  Visualization.h  Wall.h
PathFinding/src/: EnvironmentGeneration.cpp  Grid.cpp  Maze.cpp  PathFinding.cpp  PathFindingUtils.cpp  Visualization.cpp  Wall.cpp  main.cpp
Pendulum/: CMakeLists.txt
Pendulum/include/: core.h  simple_pendulum.h  visualizer.h
Pendulum/src/: simple_pendulum.cpp  simple_pendulum_app.cpp  visualizer.cpp
SDL_exploration/: .CMakeLists.txt.swp  CMakeLists.txt
SDL_exploration/include/: sdl_maze.h  sdl_maze_core.h  sdl_maze_utils.h
SDL_exploration/src/: .sdl1.cpp.swp  sdl1.cpp  sdl2.cpp  sdl_grid.cpp  sdl_maze.cpp  sdl_maze_main.cpp  sdl_maze_utils.cpp
Tiling/: CMakeLists.txt
Tiling/include/: Tiling.h
Tiling/src/: Tiling.cpp  domino_tromino_tiling.cpp
Tree/Quadtree/: datatypes.py  main.py  quad_tree.py
grids/: CMakeLists.txt
grids/src/: grid.cpp
helloworld/: .CMakeLists.txt.swp  CMakeLists.txt
helloworld/src/: main.cpp
